--- a/templates/index.html
+++ b/templates/index.html
@@ -114,15 +114,14 @@
 <body>
   <div class="logo">
     <img src="/static/logo.png" alt="ZuCo Logo">
-    <div class="logo-text">ZuCo Fleet Updater</div>
   </div>
 
   <h2>Fleet Status Updater</h2>
 
-  <label>Fleet File:</label>
+  <label>Fleet File (fleet-moviles.xls):</label>
   <input type="file" id="fleet-file">
 
-  <label>Availability File:</label>
+  <label>Idle File (disponibilidad.xls):</label>
   <input type="file" id="disp-file">
 
   <button onclick="enviarArchivos()">Process Files</button>
