--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ZuCo Fleet Status Updater</title>
+  <title>Utilização Fleet Status Updater</title>
   <style>
     :root {
       --green: #00ff7f;
